# Zoho-CRM-MCP

./: .env.example  .gitignore  LICENSE  README.md  fix_zoho_app.md  pyproject.toml  requirements.txt  run-personal.ps1  run-server.ps1  start.bat  start.ps1  test_connection.py
src/: __init__.py  server.py  zoho_auth.py
